[FIX] Minor graphic bug : tooltip not visible when colorblind mode
tooltips "number of cards" and "dealer token" were not visible when colorblind shape overlaps

--- a/sticktocolours.css
+++ b/sticktocolours.css
@@ -239,6 +239,11 @@ html:not(.colorblind_shapes) .colorblind_shape_token_background {
    float: left;
    padding: 2px;
 }
+.token_shape_wrapper{
+  float: right;
+  right: 50%;
+  position: relative;
+}
 .icon_handsize{
     color: black;
 }
@@ -255,6 +260,9 @@ html:not(.colorblind_shapes) .tokenShapeIcon {
 }
 .colorblind_shapes .tokenShapeIcon { 
     display: block;
+}
+.token_shape_wrapper .colorblind_shape_token_background{
+    position: relative;
 }
 
 /* ------------------------------------------------------------------------------*/
